# starthack25

./: README.md  docker-compose.yaml
development/demo/: .gitignore  config.share  docker-demo.ipynb  pyproject.toml
development/demo/data/: ev3_device_data.csv
services/backend/: .env.local  README.md  db.py  main.py  package.json  pyproject.toml
services/backend-ts/: package.json  pnpm-lock.yaml
services/backend/data/: cc_api_logs.csv  ev3_dataprofile.csv
services/webapp/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
services/webapp/src/: app.css
services/webapp/src/lib/: index.ts
services/webapp/src/lib/app/: api.ts  constants.ts  funcs.ts  state.svelte.ts  types.ts
services/webapp/src/lib/components/ui/GridAndDotBackground/: DotBackground.svelte  GridAndDotBackgrounds.svelte  (+1 more)
services/webapp/src/routes/: +error.svelte  +layout.svelte  +page.svelte
services/webapp/src/routes/app/dashboard/: +page.svelte  +page.ts  dashboard.svelte
services/webapp/src/routes/components/: benefits.svelte  faq.svelte  footer.svelte  hero.svelte  nav.svelte  steps.svelte
services/webapp/src/routes/contact/: +page.svelte
services/webapp/src/routes/dashboard/: +page.svelte  +page.ts  llm.svelte
services/webapp/src/routes/dashboard/charts/: chooser.svelte  config.svelte  dashboard.svelte
services/webapp/src/routes/dashboard/flowscore/: config_id.svelte  flowscore.svelte
services/webapp/src/routes/insights/: +page.svelte  data.ts  details.svelte  msgform.svelte
services/webapp/src/routes/login/: +page.svelte
(+5 files in other folders)
