[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"asyncpg>=0.30.0",
	"databases>=0.9.0",
	"fastapi[standard]>=0.115.11",
	"pandas>=2.2.3",
	"psycopg2>=2.9.10",
	"sqlalchemy>=2.0.39",
	"uvicorn>=0.33.0",
]
