[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"asyncpg>=0.30.0",
	"databases>=0.9.0",
	"fastapi[standard]>=0.115.11",
	"ipykernel>=6.29.5",
	"matplotlib>=3.10.1",
	"pandas>=2.2.3",
	"polars>=1.25.2",
	"psycopg2>=2.9.10",
	"pyarrow>=19.0.1",
	"pyspark>=3.5.5",
	"setuptools>=77.0.1",
	"sqlalchemy>=2.0.39",
	"uvicorn>=0.33.0",
]
